tests/regression/errors/basic/undefined_var_20.csd
// Undefined variable test 20
vibez.spill("Using undefined:", undefined_var_20)
sus result drip = missing_variable + 20
